<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/action_add"
            android:title="@string/addFolder"
            android:icon="@drawable/create_new_folder_24"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_edit"
            android:title="@string/editFolder"
            android:icon="@drawable/edit_square_24"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/clear_choose"
            android:icon="@drawable/ic_close_24"
            android:contentDescription="@string/clear_choose_image"
            android:title="@string/clear_choose_image"
            android:visibility="gone"
            app:showAsAction="ifRoom" />
</menu>